Fix mobile footer contact info line gaps by resetting paragraph margins

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5424,7 +5424,7 @@ select:focus {
 }
 
 .contact-info p {
-    margin-bottom: 1px;
+    margin: 0 0 1px 0;
 }
 
 /* Responsive Design */
